# tensorflow_plus_keras

./: 01_Keras_MNIST_MLP.ipynb  02_Keras_MNIST_CNN.ipynb  03_Keras_CIFAR-10_CNN.ipynb  04_Keras_Titanic_MLP.ipynb  05_Keras_IMDb_dataset.ipynb  README.md  pyproject.toml
SaveModel/: .gitignore
data/: .gitignore  titanic3.xls
